@@ -1,20 +1,23 @@
 package me.kavin.piped.utils;
 
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.*;
 import java.util.function.Supplier;
 
 public class Multithreading {
 
-    private static final ExecutorService es = Executors.newCachedThreadPool();
+    private static final ExecutorService es = Executors.newVirtualThreadPerTaskExecutor();
     private static final ExecutorService esLimited = Executors
             .newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 8);
     private static final ExecutorService esLimitedPubSub = Executors
             .newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+    private static final ForkJoinPool forkJoinPool = new ForkJoinPool(Runtime.getRuntime().availableProcessors());
 
     public static void runAsync(final Runnable runnable) {
         es.submit(runnable);
+    }
+
+    public static void runAsyncTask(final ForkJoinTask<?> task) {
+        forkJoinPool.submit(task);
     }
 
     public static void runAsyncLimited(final Runnable runnable) {
@@ -29,7 +32,7 @@ public class Multithreading {
         return es;
     }
 
-    public static <U> CompletableFuture<U> supplyAsync(Supplier<U> supplier) {
-        return CompletableFuture.supplyAsync(supplier, es);
+    public static <U> Future<U> supplyAsync(Supplier<U> supplier) {
+        return es.submit(supplier::get);
     }
 }
